@@ -1,3 +1,8 @@
+TAG: annotload-6-0-13-1
+DATE: 10/15/2018
+STAFF: lec
+CHANGES: TR12734/GeneFeVah: processMcv needs to use configuration value to determine annnotation type
+
 TAG: annotload-6-0-12-1
 DATE: 03/07/2018
 STAFF: lec
